@@ -1,3 +1,9 @@
+2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* prescale relevant changes by Chris
+	* add rcmsStateNotifier from xdaq2rc package to inform run control
+	of self-triggered transition into target state
+
 2007-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* no tag :(
